checkpoint/src/styles/tasks.css
.tasks-everything-box{
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    padding: 5px;
    margin-top: 150px;
    height: 100%;
    background-color: #285A8f;
    border-radius: 5px;
    width: 75%;
}
ul, li {
    list-style-type: none;
    margin: 0 0;
    padding: 0 0;
    padding-left: 0 !important;
}

header{
    text-align: center;
    padding: 1.5%;
    text-shadow: -4px 5px 11px rgba(0, 0, 0, 0.6);
    color: #000000;
    font-size: 30px;

}


body{
    background-color: #dbe6fbff !important;
}
.to-do-box, .overdue-box{
    position: relative;
    background-color: rgb(196, 196, 228);
    padding: 10px;
    display: block;
    height: 400px;
    width: 800px;
    margin:10px;
}
.custom-button { 
    background-color: #0a074aff !important;
    color: white !important;
    padding: 15px 32px !important;
    border-radius: 5px !important;
    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2) !important;
    display: inline-block !important;
}

.create-task-input-container {
    width: 100%;
    height: auto;
    text-align: center;
    align-items: center;
    justify-content: center;
}

.create-task-input {
    width: 50%;
    height: 100%;
    position: relative;
    text-align: center;
    margin: 0 auto;
    padding: 1rem;
}

.tasks-list-container {
    text-align: center;
    width: 100%;
    height: auto;
    margin: 0 auto;
    padding: 0.5rem;
    display: inline-block !important;

}

.tasks-list {
    text-align: center;
    padding: 1rem;
    display:inline;
    width: 65%;
}

.tasks-flex{
    flex-direction: row;
    flex-wrap: nowrap;
    overflow-x: scroll;
    overflow-y: hidden;
    display: flex;
}

.task-card {
    text-align: left;
    width: 100%;
    cursor: pointer;
}

.lonely {
    font-size: 1.2rem;
    text-align: center;
}

.add-task {
    text-align: center;
    width: 10rem;
    height: 5rem;
    margin-right: 5px;
    display: inline !important;
  
}

.list-title {
    font-size: 1.6rem;
    padding-top: 4rem;
}

.task-time {
    font-size: 1rem;
}

.task-text {
    text-align: center;
    font-size: 1.6rem;
    font-weight: 400;
}

.delete-button {
    text-align: center;
}

.custom-button-hide {
    visibility: hidden;
    background-color: #0a074aff !important;
    color: white !important;
    padding: 15px 32px !important;
    border-radius: 5px !important;
    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2) !important;
    display: inline-block !important;
}

